--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "node-sass" : "node-sass",
-    "sass" : "node-sass -wr style/main.scss ./style.css"
+    "node-sass": "node-sass",
+    "sass": "node-sass -wr style/main.scss ./style.css"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,8 @@
   "homepage": "https://github.com/parkjikuk/tomorrow-house#readme",
   "dependencies": {
     "node-sass": "^7.0.0"
+  },
+  "devDependencies": {
+    "sass-lint": "^1.13.1"
   }
 }
